@@ -34,8 +34,16 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
-		<span><b>2018-07-29</b></span>
-			<div id="changelog20180729">
+		<span><b>2019-10-05</b></span>
+		<div id="changelog20191005">
+			<ul>
+				<li>Malaya Cards added.</li>
+				<li>Fixed ATK to now show for Imperal spear when adding spear mastery levels.</li>
+			</ul>
+		</div>
+		<br/>
+		<span><b>2018-07-29</b>[<a href="javascript: void(0)" onclick="Toogle('changelog20180630',this)">Show</a>]</span>
+			<div style="display: none" id="changelog20180729">
 					<ul>
 						<li>Added Eden/Mora/El Discates/Biolab Enchants;</li>
 						<li>Added Battleground Items;</li>
