@@ -540,6 +540,9 @@ JobSkillActiveOBJ = [
 [  0,418,419,423,428,429,430,431,432,434,435,436,437,999],
 ];
 
+/*
+ID,
+*/
 InsertSkill = [
 [0,0,0,0],
 [1,1,54,3],
