@@ -1,3 +1,7 @@
+[2019-10-05]
+-Added Malaya Cards [ZoneSoldier]
+-Fixed Atk to now show for imperal spear when adding spear mastery lvls. [ZoneSoldier]
+
 [2018-08-11]
 - Fixed Poison Knife itemid [Loa]
 - Fixed FLEE reduction when mobbed [Loa]
